# vps-monitor

./: .env.example  .gitignore  CHANGELOG.md  LICENSE  Makefile  ONBOARDING.md  README.md  SECURITY.md  config.example.json  config.json  config.production.json  config.py  install.sh  main.py  monitor.py  pyproject.toml  vps-monitor.service  vpsmonctl
.github/: dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.md  config.yml  feature_request.md
.github/workflows/: test.yml
core/: logging.py  notify.py  state.py  utils.py
docs/: ADDING_SOURCES.md  ARCHITECTURE.md  CONFIGURATION.md  CONTRIBUTING.md  INSTALL.md  PITFALLS.md  RELEASE_CHECKLIST.md  ROADMAP.md
docs/sites/: czl.md  dujiaojing.md  site-a-whmcs.md  site-b-public.md  site-c-resource-template.md  site-d-html-scrape.md  site-e-vps-monitor-czl.md
examples/: minimal-czl.json  offer.example.json  state.example.json
scripts/: czl_summary.py  health_bot.py  install.sh  inventory_snapshot.py  poorvps_nav_watch.py  rm_site_c.py
sites/: site_a.py  site_e.py
systemd/: vps-monitor-v4-bnm.service  vps-monitor-v4-bnm.timer  vps-monitor-v4-czl.service  vps-monitor-v4-czl.timer  vps-monitor-v4-dujiaojing.service  vps-monitor-v4-dujiaojing.timer  vps-monitor-v4-poorvps-nav.service  vps-monitor-v4-poorvps-nav.timer
tests/: test_compare_logic.py  test_core.py  test_monitor_smoke.py  test_site_e.py  test_state_diff.py
tests/fixtures/: czl_page_1.json  czl_page_2.json  dujiaojing_page_1.json  dujiaojing_page_2.json
vpsmon/: __init__.py  cli.py  config.py  models.py
vpsmon/engine/: diff.py
vpsmon/notifiers/: telegram.py
vpsmon/rules/: filtering.py  parsing.py
vpsmon/sources/: __init__.py  bnm.py  czl.py  dujiaojing.py
vpsmon/storage/: sqlite.py
