[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "vps-monitor"
version = "3.0.0"
description = "VPS hosting stock/restock monitor with Telegram push (multi-site adapter, event-driven diff, systemd)"
readme = "README.md"
license = {file = "LICENSE"}
authors = [
    {name = "vps-monitor contributors"}
]
requires-python = ">=3.9"
keywords = ["vps", "monitoring", "telegram", "whmcs", "stock-watcher"]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: System Administrators",
    "License :: OSI Approved :: MIT License",
    "Operating System :: POSIX :: Linux",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: System :: Monitoring",
]
dependencies = [
    "requests>=2.28.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "ruff>=0.1.0",
]

[project.scripts]
vpsmonctl = "vpsmonctl:main"

[project.urls]
Homepage = "https://github.com/shali10/vps-monitor"
Issues = "https://github.com/shali10/vps-monitor/issues"
Changelog = "https://github.com/shali10/vps-monitor/blob/main/CHANGELOG.md"

[tool.setuptools]
py-modules = ["monitor", "vpsmonctl"]

[tool.setuptools.package-data]
"" = ["*.md", "*.txt", "*.service"]

[tool.ruff]
line-length = 100
target-version = "py39"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "B", "UP"]
ignore = ["E501"]  # long lines OK for now (monitor.py legacy)
